--- a/configs/sway/config
+++ b/configs/sway/config
@@ -14,13 +14,7 @@ set $yellow_color #ffdd00
 set $orange_color #ff9e64
 set $purple_color #dd77ff
 
-set $lock_cmd swaylock --image "$(random_wllppr)" -s fill
-set $status_command ~/dotfiles/scripts/mi3status
-set $browser waterfox
 set $terminal_app st
-set $music_app spotify
-set $messaging_app ferdium
-
 set $gap_size 1
 set $titlebar_padding_size 3
 set $font_size_small 0.001
@@ -31,25 +25,16 @@ set $mouse_move_small 10
 set $mouse_move_large 50
 set $mouse_speed_fast 2
 set $mouse_speed_slow 0.5
-
-exec mako
 set $mod Mod4
 set $left h
 set $down j
 set $up k
 set $right l
-set $menu fuzzel | xargs swaymsg exec --
-bindsym $mod+d exec $menu
 
-set $type_clipboard cliphist list | fuzzel -d | cliphist decode | wtype -
-bindsym $mod+v exec $type_clipboard
-set $clipboard cliphist list | fuzzel -I -d | cliphist decode | wl-copy
-exec wl-paste --watch cliphist store
-bindsym $mod+p exec $clipboard
+bindsym $mod+d exec fuzzel | xargs swaymsg exec --
+bindsym $mod+p exec cliphist list | fuzzel -I -d | cliphist decode | wl-copy
 bindsym $mod+shift+p exec cliphist wipe | fyi "Clipboard" "Cleared"
-
 bindsym $mod+r exec swaymsg output "*" bg "$(random_wllppr)" fill
-output "*" bg "$(random_wllppr)" fill
 
 set $player org.mpris.MediaPlayer2.spotify
 set $dbus_send dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
@@ -69,13 +54,11 @@ bindsym XF86AudioPrev exec $dbus_send.Previous
 bindsym $mod+a exec $dbus_send.Previous
 bindsym Print exec slurp | grim -g - - | wl-copy
 bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
-set $lock swaylock --image "$(random_wllppr)" -s fill
-bindsym $mod+Escape exec $dbus_send.Pause & $lock
+bindsym $mod+Escape exec $dbus_send.Pause & swaylock --image "$(random_wllppr)" -s fill
 
 bindsym $mod+delete exec kill_ps
 bindsym $mod+tab exec switcheroo
 bindsym $mod+shift+tab exec window_selector
-
 bindsym $mod+apostrophe exec passotp
 
 floating_modifier $mod normal
@@ -148,8 +131,6 @@ client.focused_inactive   $grey_color $bg_color $fg_color $grey_color $grey_colo
 
 workspace_layout tabbed
 
-exec brightnessctl set 100%
-
 output eDP-1 {
   position 1920 0
 }
@@ -179,8 +160,6 @@ input * {
   scroll_method two_finger
   dwt enabled
 }
-
-seat seat0 hide_cursor $hide_cursor_timeout
 
 bindsym $mod+m mode "mouse"
 mode "mouse" {
@@ -218,7 +197,7 @@ titlebar_border_thickness 0
 
 bar {
     position top
-    status_command $status_command
+    status_command ~/dotfiles/scripts/mi3status
     font CaskaydiaCove Nerd Font Propo: $font_size_bar
     colors {
         background $bar_bg_color
@@ -236,10 +215,16 @@ exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CU
 exec hash dbus-update-activation-environment 2>/dev/null && \
        dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
+# Innit?
+
+exec wl-paste --watch cliphist store
+exec brightnessctl set 100%
+seat seat0 hide_cursor $hide_cursor_timeout
+exec mako
+output "*" bg "$(random_wllppr)" fill
+
 workspace 1
-exec --no-startup-id pgrep waterfox || exec waterfox
+exec waterfox
 workspace 2
 exec $terminal_app -e tmux
-exec --no-startup-id pgrep spotify || exec spotify
-workspace 3
-exec --no-startup-id pgrep ferdium || exec ferdium
+exec spotify
