--- a/configs/sway/config
+++ b/configs/sway/config
@@ -38,20 +38,24 @@ bindsym $mod+r exec swaymsg output "*" bg "$(random_wllppr)" fill
 
 set $player org.mpris.MediaPlayer2.spotify
 set $dbus_send dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
-bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
-bindsym XF86AudioLowerVolume exec amixer sset Master 5%-
-bindsym Shift+XF86AudioRaiseVolume exec amixer sset Capture 5%+
-bindsym Shift+XF86AudioLowerVolume exec amixer sset Capture 5%-
-bindsym Shift+XF86AudioMute exec amixer sset Capture toggle
-bindsym XF86AudioMute exec amixer sset Master toggle
-bindsym XF86MonBrightnessDown exec brightnessctl set 15%-
-bindsym XF86MonBrightnessUp exec brightnessctl set +15%
+
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindsym Shift+XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 5%+
+bindsym Shift+XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 5%-
+bindsym Shift+XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
 bindsym --locked XF86AudioPlay exec $dbus_send.PlayPause
 bindsym --locked $mod+space exec $dbus_send.PlayPause
 bindsym XF86AudioNext exec $dbus_send.Next
 bindsym $mod+s exec $dbus_send.Next
 bindsym XF86AudioPrev exec $dbus_send.Previous
 bindsym $mod+a exec $dbus_send.Previous
+
+bindsym XF86MonBrightnessDown exec brightnessctl set 15%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +15%
+
 bindsym Print exec slurp | grim -g - - | wl-copy
 bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
 bindsym $mod+Escape exec $dbus_send.Pause & swaylock --image "$(random_wllppr)" -s fill
