--- a/configs/fuzzel/fuzzel.ini
+++ b/configs/fuzzel/fuzzel.ini
@@ -1,5 +1,5 @@
 [main]
-font=Inter:size=10.5
+font=CaskaydiaCove Nerd Font:size=12
 dpi-aware=no
 prompt="❯ "
 icon-theme=Adwaita
@@ -11,20 +11,21 @@ image-size-ratio=1
 layer=overlay
 
 [colors]
-background=282a36dd
-text=f8f8f2ff
-match=8be9fdff
-selection-match=8be9fdff
-selection=44475add
-selection-text=f8f8f2ff
-border=bd93f9ff
+background=1a1b26dd
+text=7dcfffff
+match=7aa2f7ff
+selection-match=7aa2f7ff
+selection=33467cff
+selection-text=c0caf5ff
+border=7dcfffff
 
 [border]
 width=1
 radius=1
 
 [key-bindings]
-delete-line-forward=none
+delete-next=none
+delete-line-forward=Control+d
 next=Control+j
 prev=Control+k
 delete-prev-word=Control+w
