--- a/configs/k9s/skins/freak.yaml
+++ b/configs/k9s/skins/freak.yaml
@@ -1,100 +1,103 @@
 # -----------------------------------------------------------------------------
-# Freak skin
+# Tokyo Night Storm skin for k9s
+# Based on folke's nvim-tokyonight Storm variant
 # -----------------------------------------------------------------------------
-
 # Styles...
-foreground: &foreground "#ffffff"
-background: &background "default"
-current_line: &current_line "#44475a"
-selection: &selection "#FF5F1F"
-comment: &comment "#6272a4"
-cyan: &cyan "#39FF14"
-green: &green "#00FFFF"
-orange: &orange "#FF5F1F"
-pink: &pink "#FF10F0"
-purple: &purple "#B026FF"
-red: &red "#FF3131"
-yellow: &yellow "#FFFF33"
-
+foreground: &foreground "#c0caf5"
+background: &background "default" # Transparent
+current_line: &current_line "#292e42"
+selection: &selection "#364a82"
+comment: &comment "#565f89"
+cyan: &cyan "#7dcfff"
+green: &green "#9ece6a"
+orange: &orange "#ff9e64"
+pink: &pink "#bb9af7"
+purple: &purple "#9d7cd8"
+red: &red "#f7768e"
+yellow: &yellow "#e0af68"
+blue: &blue "#7aa2f7"
+teal: &teal "#1abc9c"
 # Skin...
 k9s:
   # General K9s styles
   body:
-    fgColor: *foreground
+    fgColor: *cyan
     bgColor: *background
     logoColor: *purple
   # Command prompt styles
   prompt:
-    fgColor: *foreground
+    fgColor: *cyan
     bgColor: *background
-    suggestColor: *purple
+    suggestColor: *pink
   # ClusterInfoView styles.
   info:
     fgColor: *pink
-    sectionColor: *foreground
+    sectionColor: *blue
   # Dialog styles.
   dialog:
     fgColor: *foreground
     bgColor: *background
     buttonFgColor: *foreground
     buttonBgColor: *purple
-    buttonFocusFgColor: *yellow
-    buttonFocusBgColor: *pink
-    labelFgColor: *orange
-    fieldFgColor: *foreground
+    buttonFocusFgColor: *current_line
+    buttonFocusBgColor: *cyan
+    labelFgColor: *yellow
+    fieldFgColor: *cyan
   frame:
     # Borders styles.
     border:
-      fgColor: *selection
-      focusColor: *current_line
+      fgColor: *purple
+      focusColor: *cyan
     menu:
-      fgColor: *foreground
+      fgColor: *cyan
       keyColor: *pink
       # Used for favorite namespaces
-      numKeyColor: *pink
+      numKeyColor: *orange
     # CrumbView attributes for history navigation.
     crumbs:
-      fgColor: *foreground
+      fgColor: *cyan
       bgColor: *current_line
-      activeColor: *current_line
+      activeColor: *pink
     # Resource status and update styles
     status:
-      newColor: *cyan
-      modifyColor: *purple
-      addColor: *green
+      newColor: *green
+      modifyColor: *orange
+      addColor: *cyan
       errorColor: *red
-      highlightColor: *orange
+      highlightColor: *yellow
       killColor: *comment
-      completedColor: *comment
+      completedColor: *purple
     # Border title styles.
     title:
-      fgColor: *foreground
+      fgColor: *cyan
       bgColor: *current_line
-      highlightColor: *orange
-      counterColor: *purple
-      filterColor: *pink
+      highlightColor: *pink
+      counterColor: *yellow
+      filterColor: *orange
   views:
     # Charts skins...
     charts:
       bgColor: default
       defaultDialColors:
         - *purple
-        - *red
+        - *cyan
+        - *pink
       defaultChartColors:
         - *purple
-        - *red
+        - *cyan
+        - *pink
     # TableView attributes.
     table:
-      fgColor: *foreground
+      fgColor: *cyan
       bgColor: *background
       # Header row styles.
       header:
-        fgColor: *foreground
+        fgColor: *pink
         bgColor: *background
-        sorterColor: *cyan
+        sorterColor: *yellow
     # Xray view attributes.
     xray:
-      fgColor: *foreground
+      fgColor: *cyan
       bgColor: *background
       cursorColor: *current_line
       graphicColor: *purple
@@ -103,13 +106,13 @@ k9s:
     yaml:
       keyColor: *pink
       colonColor: *purple
-      valueColor: *foreground
+      valueColor: *cyan
     # Logs styles.
     logs:
-      fgColor: *foreground
+      fgColor: *cyan
       bgColor: *background
       indicator:
         fgColor: *foreground
         bgColor: *purple
         toggleOnColor: *green
-        toggleOffColor: *cyan
+        toggleOffColor: *red
