spotify<>spicetify -> ncspot | pinentry font

--- a/configs/bottom/bottom.toml
+++ b/configs/bottom/bottom.toml
@@ -5,6 +5,7 @@ tree = false
 network_use_log = true
 enable_gpu = true
 enable_cache_memory = true
+default_widget_type = "proc"
 
 [[row]]
 ratio = 30
