--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -1,25 +1,16 @@
 set -ag terminal-overrides ",$TERM:RGB"
-
 set -s escape-time 0
-
 set -g prefix C-Space
-
 set-window-option -g mode-keys vi
-
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
 bind C-v paste-buffer
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
-
 bind-key -n M-e run-shell "tmux-capture-pane"
-
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
-
 bind-key -n M-\' select-window -t 0
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
@@ -30,7 +21,6 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
-
 bind-key -r -T prefix M-k resize-pane -U 5
 bind-key -r -T prefix M-j resize-pane -D 5
 bind-key -r -T prefix M-h resize-pane -L 5
@@ -39,12 +29,9 @@ bind-key -r -T prefix C-k resize-pane -U
 bind-key -r -T prefix C-j resize-pane -D
 bind-key -r -T prefix C-h resize-pane -L
 bind-key -r -T prefix C-l resize-pane -R
-
 bind-key -r -T prefix e choose-window 'join-pane -h -t "%%"'
 bind-key -r -T prefix C-e choose-session 'move-window -t "%%"'
-
 bind s setw synchronize-panes
-
 bind "'" \
   set key-table off \; \
   set prefix None \; \
@@ -52,14 +39,12 @@ bind "'" \
   if -F '#{pane_in_mode}' 'send-keys -X cancel' \; \
   refresh-client -S \; \
   display-message "Nested tmux control ON"
-
 bind -T off "'" \
   set -u key-table \; \
   set -u prefix \; \
   set -u prefix2 \; \
   refresh-client -S \; \
   display-message "Nested tmux control OFF"
-
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
@@ -68,7 +53,6 @@ set -g pane-border-indicators both
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
-
 set -g window-size latest
 setw -g aggressive-resize on
 set-option -g status-position bottom
@@ -76,15 +60,15 @@ set -g window-style 'main-pane-height: "#{window_height}"'
 set -s set-clipboard on
 unbind -T copy-mode-vi MouseDragEnd1Pane
 bind -T copy-mode-vi y send-keys -X copy-pipe
-
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin "janoamaral/tokyo-night-tmux"
-
 set -g @tokyo-night-tmux_theme night
 set -g @tokyo-night-tmux_transparent 1
 set -g @tokyo-night-tmux_show_datetime 0
-
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
+
+if-shell '[ -n "$WAYLAND_DISPLAY" ]' \
+  "bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'wl-copy'" \
+  "bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel"
