--- a/configs/ncspot/config.toml
+++ b/configs/ncspot/config.toml
@@ -15,8 +15,7 @@ highlight = "#73daca"
 highlight_bg = "#1a1b26"
 error = "#c0caf5"
 error_bg = "#f7768e"
-statusbar = "#24283b"
+statusbar = "#7dcfff"
 statusbar_progress = "#73daca"
-statusbar_bg = "#7dcfff"
 cmdline_bg = "#24283b"
 search_match = "#bb9af7"
