--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -1,6 +1,10 @@
+set -g default-terminal "st-256color"
 set -ag terminal-overrides ",$TERM:RGB"
 set -s escape-time 0
 set -g prefix C-Space
+set -g allow-rename off
+set -g set-titles off
+set -g status-interval 1
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind C-v paste-buffer
