--- a/configs/sway/config
+++ b/configs/sway/config
@@ -135,18 +135,14 @@ client.focused_inactive   $grey_color $bg_color $fg_color $grey_color $grey_colo
 
 workspace_layout tabbed
 
-output eDP-1 {
-  position 1920 0
-}
-
-output DP-1 {
-  position 0 0
+output DVI-D-1 {
+    mode 1920x1080@144.001Hz
+    position 0,0
 }
 
 output HDMI-A-1 {
-  position -1080 0
-  transform 270
-  mode 1920x1080@60Hz
+    mode 2560x1080@60.000Hz
+    position 1920,0
 }
 
 input "type:keyboard" {
