--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -1,10 +1,27 @@
-set -g default-terminal "st-256color"
-set -ag terminal-overrides ",$TERM:RGB"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",st-256color:RGB"
+set -ag terminal-overrides ",st-256color:Tc"
 set -s escape-time 0
 set -g prefix C-Space
 set -g allow-rename off
 set -g set-titles off
 set -g status-interval 1
+set -g base-index 1
+set -g renumber-windows on
+set -g pane-border-lines double
+set -g pane-border-indicators both
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+set -g window-size latest
+set -g window-style 'main-pane-height: "#{window_height}"'
+set -s set-clipboard on
+set-option -g status-position bottom
+setw -g pane-base-index 1
+setw -g aggressive-resize on
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi y send-keys -X copy-pipe
+
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind C-v paste-buffer
@@ -36,6 +53,7 @@ bind-key -r -T prefix C-l resize-pane -R
 bind-key -r -T prefix e choose-window 'join-pane -h -t "%%"'
 bind-key -r -T prefix C-e choose-session 'move-window -t "%%"'
 bind s setw synchronize-panes
+
 bind "'" \
   set key-table off \; \
   set prefix None \; \
@@ -49,21 +67,7 @@ bind -T off "'" \
   set -u prefix2 \; \
   refresh-client -S \; \
   display-message "Nested tmux control OFF"
-set -g base-index 1
-setw -g pane-base-index 1
-set -g renumber-windows on
-set -g pane-border-lines double
-set -g pane-border-indicators both
-set -g allow-passthrough on
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
-set -g window-size latest
-setw -g aggressive-resize on
-set-option -g status-position bottom
-set -g window-style 'main-pane-height: "#{window_height}"'
-set -s set-clipboard on
-unbind -T copy-mode-vi MouseDragEnd1Pane
-bind -T copy-mode-vi y send-keys -X copy-pipe
+
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'tmux-plugins/tpm'
@@ -71,8 +75,9 @@ set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_theme night
 set -g @tokyo-night-tmux_transparent 1
 set -g @tokyo-night-tmux_show_datetime 0
-run -b '$HOME/.config/tmux/plugins/tpm/tpm'
 
 if-shell '[ -n "$WAYLAND_DISPLAY" ]' \
   "bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'wl-copy'" \
   "bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel"
+
+run -b '$HOME/.config/tmux/plugins/tpm/tpm'
