--- a/configs/bottom/bottom.toml
+++ b/configs/bottom/bottom.toml
@@ -1,5 +1,5 @@
 [flags]
-battery = true
+battery = false
 process_memory_as_value = true
 tree = false
 network_use_log = true
@@ -21,10 +21,6 @@ ratio = 25
 [[row.child]]
 ratio = 3
 type = "net"
-[[row.child]]
-ratio = 1
-type = "battery"
-
 [[row]]
 ratio = 15
 [[row.child]]
