--- a/configs/sway/config
+++ b/configs/sway/config
@@ -35,6 +35,7 @@ bindsym $mod+d exec fuzzel | xargs swaymsg exec --
 bindsym $mod+p exec cliphist list | fuzzel -I -d | cliphist decode | wl-copy
 bindsym $mod+shift+p exec cliphist wipe | fyi "Clipboard" "Cleared"
 bindsym $mod+r exec swaymsg output "*" bg "$(random_wllppr)" fill
+bindsym $mod+Shift+s exec sh -c 'if tmux list-windows -a -F "#{window_name}" 2>/dev/null | grep -q "^ncspot$"; then exit 0; else tmux new-window -d -n ncspot ncspot 2>/dev/null || $terminal_app -e tmux new-session -s main -n ncspot ncspot; fi'
 
 bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -135,6 +136,11 @@ for_window [app_id=".*"] inhibit_idle fullscreen
 
 # Force focus when returning to workspace with fullscreen app
 for_window [title=".*"] focus
+for_window [class="^[Ss]team"] move container to workspace 2
+for_window [class="^[Hh]eroic"] move container to workspace 2
+for_window [class="^wine"] move container to workspace 2
+for_window [class="^proton"] move container to workspace 2
+no_focus [class="^steam_app_"]
 focus_follows_mouse no
 
 titlebar_border_thickness $gap_size
@@ -237,7 +243,5 @@ workspace 1
 exec waterfox
 workspace 2
 exec $terminal_app -e tmux
-workspace 3
 exec discord --enable-features=UseOzonePlatform --ozone-platform=wayland --start-minimized
-workspace 4
 exec steam -silent
