term and shell colors

--- a/configs/foot/foot.ini
+++ b/configs/foot/foot.ini
@@ -1,29 +1,62 @@
 [main]
 font=CaskaydiaCove Nerd Font:pixelsize=14:antialias=true:autohint=true
+font-bold=CaskaydiaCove Nerd Font:weight=bold:pixelsize=14
+dpi-aware=yes
 
 [colors]
-alpha=0.6                       # match your ST alpha
+alpha=0.65
+alpha-mode=matching
+background=0a0a0a
+foreground=ffffff
 
-# Normal colors
-regular0=0d0e16   # black
-regular1=ff5f87   # red
-regular2=73ff50   # green
-regular3=ffcc00   # yellow
-regular4=5599ff   # blue
-regular5=cc88ff   # magenta
-regular6=00ddff   # cyan
-regular7=ffffff   # white
+regular0=1a1b26
+regular1=ff6b7a
+regular2=9ece6a
+regular3=e0af68
+regular4=7aa2f7
+regular5=bb9af7
+regular6=7dcfff
+regular7=a9b1d6
 
-# Bright colors
-bright0=565f89    # bright black
-bright1=ff4477    # bright red
-bright2=66ff33    # bright green
-bright3=ffdd00    # bright yellow
-bright4=3388ff    # bright blue
-bright5=dd77ff    # bright magenta
-bright6=00ccff    # bright cyan
-bright7=ffffff    # bright white
+bright0=414868
+bright1=ff007b
+bright2=39ff14
+bright3=ffff00
+bright4=00f7ff
+bright5=ff00ff
+bright6=00ffea
+bright7=ffffff
 
-# Default text & background
+[cursor]
+style=beam
+beam-thickness=3px
+color=00f7ff
+
+[tweak]
+bold-text-in-bright=yes
+bold-text-in-bright-amount=1.0
+
+[selection]
+background=33467c
 foreground=c0caf5
-background=0d0e16
+escape-time=100
+
+[scroll]
+scrollback=10000
+scrollback-multiplier=3.0
+
+[mouse]
+mouse-hide-when-typing=yes
+
+[url]
+launch=xdg-open
+color=00f7ff
+underline=url
+
+[key-bindings]
+scrollback-up=Control+Shift+Up
+scrollback-down=Control+Shift+Down
+font-increase=Control+Plus
+font-decrease=Control+Minus
+font-reset=Control+0
+spawn-terminal=Control+Shift+n
