--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -1,6 +1,5 @@
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",st-256color:RGB"
-set -ag terminal-overrides ",st-256color:Tc"
+set -ga terminal-overrides ",foot*:Tc:RGB"
 set -s escape-time 0
 set -g prefix C-Space
 set -g allow-rename off
