--- a/configs/sway/config
+++ b/configs/sway/config
@@ -14,7 +14,7 @@ set $yellow_color #ffdd00
 set $orange_color #ff9e64
 set $purple_color #dd77ff
 
-set $terminal_app st
+set $terminal_app foot
 set $gap_size 1
 set $titlebar_padding_size 3
 set $font_size_small 0.001
@@ -59,9 +59,9 @@ bindsym $mod+a exec $dbus_send.Previous
 bindsym XF86MonBrightnessDown exec brightnessctl set 15%-
 bindsym XF86MonBrightnessUp exec brightnessctl set +15%
 
-bindsym Print exec slurp | grim -g - - | wl-copy
-bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
-bindsym $mod+Escape exec $dbus_send.Pause & swaylock --image "$(random_wllppr)" -s fill
+bindsym $mod+Home exec slurp | grim -g - - | wl-copy
+bindsym $mod+Shift+Home exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
+#bindsym $mod+Escape exec $dbus_send.Pause & swaylock --image "$(random_wllppr)" -s fill
 
 bindsym $mod+delete exec kill_ps
 bindsym $mod+shift+d exec kill_ps
@@ -238,9 +238,8 @@ seat seat0 hide_cursor $hide_cursor_timeout
 exec mako
 output "*" bg "$(random_wllppr)" fill
 
-exec nvidia-settings -a "[gpu:0]/GpuPowerMizerMode=1"
 workspace 1
-exec waterfox
+exec floorp
 workspace 2
 exec $terminal_app -e tmux
 exec discord --enable-features=UseOzonePlatform --ozone-platform=wayland --start-minimized
