--- a/configs/foot/foot.ini
+++ b/configs/foot/foot.ini
@@ -28,35 +28,11 @@ bright6=00ffea
 bright7=ffffff
 
 [cursor]
-style=beam
+style=block
 beam-thickness=3px
-color=00f7ff
 
 [tweak]
-bold-text-in-bright=yes
 bold-text-in-bright-amount=1.0
-
-[selection]
-background=33467c
-foreground=c0caf5
-escape-time=100
-
-[scroll]
-scrollback=10000
-scrollback-multiplier=3.0
-
-[mouse]
-mouse-hide-when-typing=yes
 
 [url]
 launch=xdg-open
-color=00f7ff
-underline=url
-
-[key-bindings]
-scrollback-up=Control+Shift+Up
-scrollback-down=Control+Shift+Down
-font-increase=Control+Plus
-font-decrease=Control+Minus
-font-reset=Control+0
-spawn-terminal=Control+Shift+n
