--- a/configs/sway/config
+++ b/configs/sway/config
@@ -16,8 +16,8 @@ set $purple_color #dd77ff
 
 set $terminal_app foot
 set $browser floorp-vaapi
-set $gap_size 0
-set $titlebar_padding_size 3
+set $gap_size 1
+set $titlebar_padding_size 1
 set $font_size_small 0.001
 set $font_size_bar 9
 set $hide_cursor_timeout 6000
@@ -45,7 +45,7 @@ bindsym Shift+XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 
 bindsym Shift+XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 5%- && notify-send "$(wpctl get-volume @DEFAULT_AUDIO_SOURCE@)"
 bindsym Shift+XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
-set $player $(get_player)
+set $player org.mpris.MediaPlayer2.youtui
 set $dbus_send dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
 
 bindsym --locked XF86AudioPlay exec $dbus_send.PlayPause
@@ -195,10 +195,9 @@ mode "mouse" {
     bindsym minus seat - cursor speed $mouse_speed_slow
 }
 
-default_border none
-default_floating_border none
+default_border pixel 1
+default_floating_border pixel 1
 font pango:monospace $font_size_small
-titlebar_padding 0
 titlebar_border_thickness 0
 
 bar {
