--- a/configs/sway/config
+++ b/configs/sway/config
@@ -20,7 +20,7 @@ set $titlebar_padding_size 3
 set $font_size_small 0.001
 set $font_size_bar 9
 set $hide_cursor_timeout 6000
-set $pointer_accel_value -0.50
+set $pointer_accel_value -0.30
 set $mouse_move_small 10
 set $mouse_move_large 50
 set $mouse_speed_fast 2
@@ -46,7 +46,7 @@ bindsym Shift+XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 
 bindsym Shift+XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 5%- && notify-send "$(wpctl get-volume @DEFAULT_AUDIO_SOURCE@)"
 bindsym Shift+XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
-set $player $(get_ncspot)
+set $player org.mpris.MediaPlayer2.youtui
 set $dbus_send dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
 
 bindsym --locked XF86AudioPlay exec $dbus_send.PlayPause
